Create email blast draft

--- a/marketing_agent_examples/basic_workflows.ipynb
+++ b/marketing_agent_examples/basic_workflows.ipynb
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -998,19 +998,13 @@
      "output_type": "stream",
      "text": [
       "Evaluation for our blog post:\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'IdeaEvaluation' object has no attribute 'seo_optimization'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[80]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mEvaluation for our blog post:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mSEO Optimization: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mevaluation\u001b[49m\u001b[43m.\u001b[49m\u001b[43mseo_optimization\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mClickability: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mevaluation.clickability\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mReadability: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mevaluation.readability\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/ai_agent_learning_examples/lib/python3.12/site-packages/pydantic/main.py:991\u001b[39m, in \u001b[36mBaseModel.__getattr__\u001b[39m\u001b[34m(self, item)\u001b[39m\n\u001b[32m    988\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28msuper\u001b[39m().\u001b[34m__getattribute__\u001b[39m(item)  \u001b[38;5;66;03m# Raises AttributeError if appropriate\u001b[39;00m\n\u001b[32m    989\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    990\u001b[39m     \u001b[38;5;66;03m# this is the current error\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m991\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m).\u001b[34m__name__\u001b[39m\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[33m object has no attribute \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mitem\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[33m'\u001b[39m)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'IdeaEvaluation' object has no attribute 'seo_optimization'"
+      "\n",
+      "SEO Optimization: 4\n",
+      "Clickability: 5\n",
+      "Readability: 5\n",
+      "Audience Fit: 5\n",
+      "Content Quality: 4\n",
+      "Comments: The blog post effectively uses relevant keywords related to brunch and charity, enhancing its SEO potential. The title and excerpt are compelling and emotionally engaging, encouraging clicks. The structure is clear and well-formatted, making it easy to read. However, the content could benefit from more specific details about the charities involved to enhance engagement.\n"
      ]
     }
    ],
@@ -1028,7 +1022,157 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1e. Create an email blast draft out of the blog post."
+    "### 1e. Create an email blast draft out of the blog post.\n",
+    "\n",
+    "Now let's create a draft of an email blast out of the blog post and the proposed idea."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'marketing_agent_examples.models' from '/Users/mark/Documents/work/demos/ai_agent_learning_examples/marketing_agent_examples/models.py'>"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# optional code snippet to reload the models module if the\n",
+    "# below import doesn't work. Jupyter notebooks can cache\n",
+    "# module imports.\n",
+    "import importlib\n",
+    "import marketing_agent_examples.models\n",
+    "\n",
+    "# Force reload the module\n",
+    "importlib.reload(marketing_agent_examples.models)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from marketing_agent_examples.models import EmailBlastDraft\n",
+    "\n",
+    "parser = PydanticOutputParser(pydantic_object=EmailBlastDraft)\n",
+    "\n",
+    "email_blast_instructions = parser.get_format_instructions()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "email_blast_draft_prompt = PromptTemplate(\n",
+    "    template=\"\"\"\n",
+    "        You are an email marketing expert creating a launch email for a brunch restaurant's new campaign.\n",
+    "\n",
+    "        You are provided with:\n",
+    "        <idea>\n",
+    "        Name: {idea_name}\n",
+    "        Audience: {audience}\n",
+    "        Campaign Message: {campaign_message}\n",
+    "        Concept: {concept}\n",
+    "        </idea>\n",
+    "\n",
+    "        <blog_post>\n",
+    "        Title: {title}\n",
+    "        Excerpt: {excerpt}\n",
+    "        Content: {content}\n",
+    "        Keywords: {keywords}\n",
+    "        </blog_post>\n",
+    "\n",
+    "        Write a short, emotionally engaging email blast targeted at the given audience. It should:\n",
+    "        - Grab attention in the subject line and preview text\n",
+    "        - Use a warm, persuasive tone that matches the audience\n",
+    "        - Summarize the blog post clearly and concisely\n",
+    "        - Lead to a strong call to action (CTA)\n",
+    "        - Be optimized for both desktop and mobile readers\n",
+    "\n",
+    "        {format_instructions}\n",
+    "\n",
+    "        Also include an explanation of why this CTA was chosen for this audience and what kind of behavioral response is expected.\n",
+    "\"\"\",\n",
+    "    input_variables=[\"idea_name\", \"audience\", \"campaign_message\", \"concept\", \"title\", \"excerpt\", \"content\", \"keywords\"],\n",
+    "    partial_variables={\"format_instructions\": parser.get_format_instructions()}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_email_blast_draft(idea: ProposedIdea, blog_post: BlogPost) -> EmailBlastDraft:\n",
+    "    prompt_text = email_blast_draft_prompt.format(\n",
+    "        idea_name=idea.idea,\n",
+    "        audience=idea.audience,\n",
+    "        campaign_message=idea.campaign_message,\n",
+    "        concept=idea.concept,\n",
+    "        title=blog_post.title,\n",
+    "        excerpt=blog_post.excerpt,\n",
+    "        content=blog_post.content,\n",
+    "        keywords=\", \".join(blog_post.keywords)\n",
+    "    )\n",
+    "\n",
+    "    messages = [\n",
+    "        SystemMessage(content=\"You are a skilled marketing copywriter and strategist.\"),\n",
+    "        HumanMessage(content=prompt_text)\n",
+    "    ]\n",
+    "\n",
+    "    response = llm(messages)\n",
+    "    return parser.parse(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "email_blast_draft: EmailBlastDraft = generate_email_blast_draft(\n",
+    "    idea=best_idea,\n",
+    "    blog_post=blog_post\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Email blast draft:\n",
+      "\n",
+      "Subject line: Brunch with a Cause: Eat, Celebrate, and Give Back!\n",
+      "Preview text: Join us for a delicious brunch that supports local charities. Gather your friends for a good cause!\n",
+      "Body: <p>Dear Brunch Lovers,</p> <p>Are you ready to make your brunch plans even more meaningful? Join us for our exciting <strong>Brunch with a Cause</strong> events, where every bite helps support local charities!</p> <p>Gather your friends and indulge in our all-you-can-eat buffet filled with mouthwatering brunch favorites. Each month, a portion of the proceeds goes directly to a different local charity, allowing you to enjoy a delightful meal while making a positive impact in our community.</p> <p>Whether you're celebrating a special milestone or just enjoying a casual get-together, our brunch is the perfect way to connect with friends and give back. Plus, you'll learn about the amazing work our featured charities are doing!</p> <p>Mark your calendars and check our website for the next event date and featured charity. Together, we can create a community that thrives on kindness and support.</p> <p>We can't wait to see you there!</p>\n",
+      "Call to action: Join Us for Brunch!\n",
+      "Explanation: This CTA was chosen to encourage immediate action from the audience, inviting them to participate in a fun and meaningful event. By using 'Join Us for Brunch!', we create a sense of community and urgency, appealing to their desire to gather with friends while supporting a good cause. The expected response is for recipients to click through to our website to learn more about the event and make reservations.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Email blast draft:\\n\")\n",
+    "print(f\"Subject line: {email_blast_draft.subject_line}\")\n",
+    "print(f\"Preview text: {email_blast_draft.preview_text}\")\n",
+    "print(f\"Body: {email_blast_draft.body}\")\n",
+    "print(f\"Call to action: {email_blast_draft.call_to_action}\")\n",
+    "print(f\"Explanation: {email_blast_draft.explanation}\")"
    ]
   },
   {
