Evaluate email blast draft

--- a/marketing_agent_examples/basic_workflows.ipynb
+++ b/marketing_agent_examples/basic_workflows.ipynb
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1179,143 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1f. Evaluate the email blast draft."
+    "### 1f. Evaluate the email blast draft.\n",
+    "\n",
+    "Now that we have an email blast draft, let's ask the LLM to evaluate the draft and score it.\n",
+    "\n",
+    "Let's score our email draft on these criteria:\n",
+    "\n",
+    "| Criterion                       | Description                                                            |\n",
+    "| ------------------------------- | ---------------------------------------------------------------------- |\n",
+    "| **Subject Effectiveness (0–5)** | Is the subject line engaging, clear, and likely to get opened?         |\n",
+    "| **Preview Quality (0–5)**       | Does the preview text create curiosity and complement the subject?     |\n",
+    "| **Message Clarity (0–5)**       | Is the main content easy to understand and well-structured?            |\n",
+    "| **CTA Strength (0–5)**          | Is the call-to-action clear, relevant, and motivating?                 |\n",
+    "| **Tone Fit (0–5)**              | Does the tone align with the intended audience from the original idea? |\n",
+    "| **Overall Comments**            | Short notes on strengths and weaknesses                                |\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'marketing_agent_examples.models' from '/Users/mark/Documents/work/demos/ai_agent_learning_examples/marketing_agent_examples/models.py'>"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# optional code snippet to reload the models module if the\n",
+    "# below import doesn't work. Jupyter notebooks can cache\n",
+    "# module imports.\n",
+    "import importlib\n",
+    "import marketing_agent_examples.models\n",
+    "\n",
+    "# Force reload the module\n",
+    "importlib.reload(marketing_agent_examples.models)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from marketing_agent_examples.models import EmailBlastDraftEvaluation\n",
+    "\n",
+    "parser = PydanticOutputParser(pydantic_object=EmailBlastDraftEvaluation)\n",
+    "\n",
+    "email_blast_draft_evaluation_instructions = parser.get_format_instructions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "email_blast_draft_evaluation_prompt = PromptTemplate(\n",
+    "    template=\"\"\"\n",
+    "        You are a senior email marketing strategist evaluating the quality of a marketing email blast.\n",
+    "\n",
+    "        Evaluate the email based on the following criteria (0-5 scale):\n",
+    "\n",
+    "        - **Subject Effectiveness**: Is the subject line likely to drive opens?\n",
+    "        - **Preview Quality**: Does the preview text complement the subject and generate curiosity?\n",
+    "        - **Message Clarity**: Is the message clear, persuasive, and well-structured?\n",
+    "        - **CTA Strength**: Is the call-to-action obvious, relevant, and likely to convert?\n",
+    "        - **Tone Fit**: Does the tone match the target audience and campaign intent?\n",
+    "\n",
+    "        Also provide 2-3 sentences of overall comments on strengths and areas for improvement.\n",
+    "\n",
+    "        Here is the email blast to evaluate:\n",
+    "\n",
+    "        Subject: {subject_line}  \n",
+    "        Preview: {preview_text}  \n",
+    "        Body: {body}  \n",
+    "        Call to Action: {cta}  \n",
+    "        Explanation: {explanation}\n",
+    "\n",
+    "        {format_instructions}\n",
+    "\"\"\",\n",
+    "    input_variables=[\"subject_line\", \"preview_text\", \"body\", \"cta\", \"explanation\"],\n",
+    "    partial_variables={\"format_instructions\": parser.get_format_instructions()}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_email_blast_draft(email_blast: EmailBlastDraft) -> EmailBlastDraftEvaluation:\n",
+    "    prompt_text = email_blast_draft_evaluation_prompt.format(\n",
+    "        subject_line=email_blast.subject_line,\n",
+    "        preview_text=email_blast.preview_text,\n",
+    "        body=email_blast.body,\n",
+    "        cta=email_blast.call_to_action,\n",
+    "        explanation=email_blast.explanation\n",
+    "    )\n",
+    "\n",
+    "    messages = [\n",
+    "        SystemMessage(content=\"You are a helpful evaluator of email marketing content.\"),\n",
+    "        HumanMessage(content=prompt_text)\n",
+    "    ]\n",
+    "\n",
+    "    response = llm(messages)\n",
+    "    return parser.parse(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "email_blast_draft_evaluation: EmailBlastDraftEvaluation = evaluate_email_blast_draft(email_blast_draft)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Evaluation for our email blast draft:\\n\")\n",
+    "print(f\"Subject Effectiveness: {email_blast_draft_evaluation.subject_effectiveness}\")\n",
+    "print(f\"Preview Quality: {email_blast_draft_evaluation.preview_quality}\")\n",
+    "print(f\"Message Clarity: {email_blast_draft_evaluation.message_clarity}\")\n",
+    "print(f\"CTA Strength: {email_blast_draft_evaluation.cta_strength}\")\n",
+    "print(f\"Tone Fit: {email_blast_draft_evaluation.tone_fit}\")\n",
+    "print(f\"Comments: {email_blast_draft_evaluation.comments}\")"
    ]
   },
   {
