Create social media posts

--- a/marketing_agent_examples/basic_workflows.ipynb
+++ b/marketing_agent_examples/basic_workflows.ipynb
@@ -1305,9 +1305,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluation for our email blast draft:\n",
+      "\n",
+      "Subject Effectiveness: 4\n",
+      "Preview Quality: 4\n",
+      "Message Clarity: 5\n",
+      "CTA Strength: 4\n",
+      "Tone Fit: 5\n",
+      "Comments: The email effectively captures attention with a compelling subject line and engaging preview text that highlights the charitable aspect of the event. The message is clear and well-structured, making it easy for readers to understand the purpose and details of the brunch. However, the CTA could be slightly more urgent to enhance conversion potential.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Evaluation for our email blast draft:\\n\")\n",
     "print(f\"Subject Effectiveness: {email_blast_draft_evaluation.subject_effectiveness}\")\n",
@@ -1322,14 +1337,247 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1g. Create social media captions and copy out of the blog post and email."
+    "### 1g. Create social media posts.\n",
+    "\n",
+    "Now, given our email blast draft, blog post, and the idea for the campaign, let's draft some social media posts.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'marketing_agent_examples.models' from '/Users/mark/Documents/work/demos/ai_agent_learning_examples/marketing_agent_examples/models.py'>"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# optional code snippet to reload the models module if the\n",
+    "# below import doesn't work. Jupyter notebooks can cache\n",
+    "# module imports.\n",
+    "import importlib\n",
+    "import marketing_agent_examples.models\n",
+    "\n",
+    "# Force reload the module\n",
+    "importlib.reload(marketing_agent_examples.models)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from marketing_agent_examples.models import SocialMediaPost, SocialMediaPostsWrapper\n",
+    "\n",
+    "parser = PydanticOutputParser(pydantic_object=SocialMediaPostsWrapper)\n",
+    "\n",
+    "social_media_posts_instructions = parser.get_format_instructions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "social_media_posts_prompt = PromptTemplate(\n",
+    "    template=\"\"\"\n",
+    "        You are a social media strategist creating platform-specific posts for an American-style brunch restaurant.\n",
+    "\n",
+    "        You are given:\n",
+    "        <idea>\n",
+    "        Name: {idea_name}\n",
+    "        Audience: {audience}\n",
+    "        Message: {campaign_message}\n",
+    "        Concept: {concept}\n",
+    "        </idea>\n",
+    "\n",
+    "        <blog_post>\n",
+    "        Title: {title}\n",
+    "        Excerpt: {excerpt}\n",
+    "        Content: {content}\n",
+    "        Keywords: {keywords}\n",
+    "        </blog_post>\n",
+    "\n",
+    "        <email_blast>\n",
+    "        Subject: {subject_line}\n",
+    "        Preview: {preview_text}\n",
+    "        Body: {body}\n",
+    "        Call to Action: {call_to_action}\n",
+    "        </email_blast>\n",
+    "\n",
+    "        Create {num_posts} social media posts that are:\n",
+    "        - Optimized for either Facebook or Instagram\n",
+    "        - Tailored to the campaign audience\n",
+    "        - Emotionally compelling, easy to skim, and visually suggestive\n",
+    "        - Short enough for quick consumption\n",
+    "        - Include relevant and popular hashtags\n",
+    "        - Include the *intended ad targeting audience* (e.g., young professionals in urban areas, families with kids, health-conscious millennials, etc.)\n",
+    "\n",
+    "        Output format:\n",
+    "        {format_instructions}\n",
+    "\"\"\",\n",
+    "    input_variables=[\n",
+    "        \"idea_name\", \"audience\", \"campaign_message\", \"concept\",\n",
+    "        \"title\", \"excerpt\", \"content\", \"keywords\",\n",
+    "        \"subject_line\", \"preview_text\", \"body\", \"call_to_action\",\n",
+    "        \"num_posts\"\n",
+    "    ],\n",
+    "    partial_variables={\"format_instructions\": parser.get_format_instructions()}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_social_media_posts(\n",
+    "    idea: ProposedIdea,\n",
+    "    blog_post: BlogPost,\n",
+    "    email_blast: EmailBlastDraft,\n",
+    "    num_posts: int = 10\n",
+    "):\n",
+    "    prompt_text = social_media_posts_prompt.format(\n",
+    "        idea_name=idea.idea,\n",
+    "        audience=idea.audience,\n",
+    "        campaign_message=idea.campaign_message,\n",
+    "        concept=idea.concept,\n",
+    "        title=blog_post.title,\n",
+    "        excerpt=blog_post.excerpt,\n",
+    "        content=blog_post.content,\n",
+    "        keywords=\", \".join(blog_post.keywords),\n",
+    "        subject_line=email_blast.subject_line,\n",
+    "        preview_text=email_blast.preview_text,\n",
+    "        body=email_blast.body,\n",
+    "        call_to_action=email_blast.call_to_action,\n",
+    "        num_posts=num_posts\n",
+    "    )\n",
+    "\n",
+    "    messages = [\n",
+    "        SystemMessage(content=\"You are a professional social media copywriter.\"),\n",
+    "        HumanMessage(content=prompt_text)\n",
+    "    ]\n",
+    "\n",
+    "    response = llm(messages)\n",
+    "    return parser.parse(response.content)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "social_media_posts: SocialMediaPostsWrapper = generate_social_media_posts(\n",
+    "    idea=best_idea,\n",
+    "    blog_post=blog_post,\n",
+    "    email_blast=email_blast_draft,\n",
+    "    num_posts=10\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Social media posts:\n",
+      "\n",
+      "Post 1:\n",
+      "Platform: Instagram\n",
+      "Content: 🥂 Gather your brunch crew and join us for our monthly **Brunch with a Cause**! Enjoy an all-you-can-eat buffet while supporting local charities. Every bite makes a difference! 💖 #BrunchWithACause #SupportLocal #BrunchGoals\n",
+      "Hashtags: #BrunchWithACause, #SupportLocal, #BrunchGoals, #CommunityLove, #EatForACause\n",
+      "Intended Audience: Social brunch groups celebrating milestones or gathering casually\n",
+      "==================================================\n",
+      "Post 2:\n",
+      "Platform: Facebook\n",
+      "Content: 🌟 Celebrate friendship and give back at our **Brunch with a Cause**! Join us for delicious food and support local charities. Together, we can make a difference! 🍽️❤️ #BrunchForACause #CommunitySpirit\n",
+      "Hashtags: #BrunchForACause, #CommunitySpirit, #GoodEats, #CharityBrunch\n",
+      "Intended Audience: Social brunch groups celebrating milestones or gathering casually\n",
+      "==================================================\n",
+      "Post 3:\n",
+      "Platform: Instagram\n",
+      "Content: 🥞 Fluffy pancakes, savory omelets, and a cause worth supporting! Join us for our **Brunch with a Cause** and enjoy a meal that gives back. 🌈 #BrunchWithACause #EatDrinkGiveBack\n",
+      "Hashtags: #BrunchWithACause, #EatDrinkGiveBack, #BrunchVibes, #Foodie\n",
+      "Intended Audience: Social brunch groups celebrating milestones or gathering casually\n",
+      "==================================================\n",
+      "Post 4:\n",
+      "Platform: Facebook\n",
+      "Content: 🎉 Mark your calendars! Our next **Brunch with a Cause** is just around the corner. Enjoy a delicious meal while supporting local charities. Let’s make a difference together! 🥳 #BrunchForACause #SupportLocal\n",
+      "Hashtags: #BrunchForACause, #SupportLocal, #BrunchTime, #Community\n",
+      "Intended Audience: Social brunch groups celebrating milestones or gathering casually\n",
+      "==================================================\n",
+      "Post 5:\n",
+      "Platform: Instagram\n",
+      "Content: 💖 Brunch is better when it’s for a cause! Join us for our **Brunch with a Cause** and enjoy an all-you-can-eat buffet while supporting local charities. Bring your friends! 🍳🥂 #BrunchWithACause #GoodFoodGoodCause\n",
+      "Hashtags: #BrunchWithACause, #GoodFoodGoodCause, #BrunchSquad, #Charity\n",
+      "Intended Audience: Social brunch groups celebrating milestones or gathering casually\n",
+      "==================================================\n",
+      "Post 6:\n",
+      "Platform: Facebook\n",
+      "Content: 🥂 Join us for a brunch that matters! Our **Brunch with a Cause** events support local charities while you enjoy a delicious meal with friends. Let’s make a difference together! 🌟 #BrunchForACause #CommunityLove\n",
+      "Hashtags: #BrunchForACause, #CommunityLove, #EatForACause, #BrunchLife\n",
+      "Intended Audience: Social brunch groups celebrating milestones or gathering casually\n",
+      "==================================================\n",
+      "Post 7:\n",
+      "Platform: Instagram\n",
+      "Content: 🍽️ Ready for a brunch that gives back? Join us for our **Brunch with a Cause**! Enjoy an all-you-can-eat buffet and support local charities. Together, we can make a difference! 💕 #BrunchWithACause #SupportLocal\n",
+      "Hashtags: #BrunchWithACause, #SupportLocal, #BrunchGoals, #FoodForGood\n",
+      "Intended Audience: Social brunch groups celebrating milestones or gathering casually\n",
+      "==================================================\n",
+      "Post 8:\n",
+      "Platform: Facebook\n",
+      "Content: 🌈 Celebrate milestones and support local charities at our **Brunch with a Cause**! Enjoy delicious food and make a positive impact in our community. Join us! 🎊 #BrunchForACause #CommunitySpirit\n",
+      "Hashtags: #BrunchForACause, #CommunitySpirit, #GoodEats, #CharityBrunch\n",
+      "Intended Audience: Social brunch groups celebrating milestones or gathering casually\n",
+      "==================================================\n",
+      "Post 9:\n",
+      "Platform: Instagram\n",
+      "Content: 🥳 Gather your friends for a brunch that makes a difference! Join us for our **Brunch with a Cause** and enjoy a delicious meal while supporting local charities. Let’s brunch for a cause! 🍳❤️ #BrunchWithACause #EatDrinkGiveBack\n",
+      "Hashtags: #BrunchWithACause, #EatDrinkGiveBack, #BrunchVibes, #Foodie\n",
+      "Intended Audience: Social brunch groups celebrating milestones or gathering casually\n",
+      "==================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Social media posts:\\n\")\n",
+    "for i, post in enumerate(social_media_posts.posts):\n",
+    "    print(f\"Post {i+1}:\")\n",
+    "    print(f\"Platform: {post.platform}\")\n",
+    "    print(f\"Content: {post.content}\")\n",
+    "    print(f\"Hashtags: {', '.join(post.hashtags)}\")\n",
+    "    print(f\"Intended Audience: {post.intended_audience}\")\n",
+    "    print(\"=\"*50)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1h. Evaluate the social media captions."
+    "Now we've been able to create social media posts."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1h. Evaluate the social media posts."
    ]
   },
   {
