Complete agentic classes

--- a/marketing_agent_examples/basic_workflows.ipynb
+++ b/marketing_agent_examples/basic_workflows.ipynb
@@ -2345,7 +2345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2496,8 +2496,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have this code, we can organize this into a social media campaign."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2513,40 +2520,39 @@
     "    6. Evaluate the social media posts.\n",
     "    \"\"\"\n",
     "    def __init__(self):\n",
-    "        pass\n",
+    "        self.blog_post_agent = BlogPostAgent()\n",
+    "        self.email_blast_draft_agent = EmailBlastDraftAgent()\n",
+    "        self.social_media_campaign_agent = SocialMediaCampaignAgent()\n",
     "\n",
+    "    def run(self, idea: ProposedIdea):\n",
+    "        # 1. Create and evaluate blog post\n",
+    "        blog_post_with_eval: BlogPostWithEvaluation = self.blog_post_agent.create_and_evaluate_blog_post(idea)\n",
     "\n",
-    "    def _create_blog_post(self):\n",
-    "        pass\n",
+    "        # 2. Create and evaluate email blast draft\n",
+    "        email_blast_with_eval: EmailBlastDraftWithEvaluation = self.email_blast_draft_agent.create_and_evaluate_email_blast_draft(\n",
+    "            idea=idea,\n",
+    "            blog_post=blog_post_with_eval.blog_post\n",
+    "        )\n",
     "\n",
+    "        # 3. Create and evaluate social media posts\n",
+    "        social_posts_with_eval: list[SocialMediaPostWithEvaluation] = self.social_media_post_agent.create_and_evaluate_social_media_posts(\n",
+    "            idea=idea,\n",
+    "            blog_post=blog_post_with_eval.blog_post,\n",
+    "            email_blast_draft=email_blast_with_eval.email_blast_draft\n",
+    "        )\n",
     "\n",
-    "    def _create_email_blast_draft(self):\n",
-    "        pass\n",
-    "\n",
-    "\n",
-    "    def _create_social_media_posts(self):\n",
-    "        pass\n",
-    "\n",
-    "\n",
-    "    def _evaluate_blog_post(self):\n",
-    "        pass\n",
-    "\n",
-    "\n",
-    "    def _evaluate_email_blast_draft(self):\n",
-    "        pass\n",
-    "\n",
-    "\n",
-    "    def _evaluate_social_media_posts(self):\n",
-    "        pass\n",
-    "\n",
-    "\n",
-    "    def create_content(self, type: str, args: dict):\n",
-    "        pass\n",
-    "\n",
-    "\n",
-    "    def evaluate_content(self, type: str, args: dict):\n",
-    "        pass\n",
-    "\n"
+    "        return {\n",
+    "            \"blog_post\": blog_post_with_eval,\n",
+    "            \"email_blast\": email_blast_with_eval,\n",
+    "            \"social_posts\": social_posts_with_eval\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now create a `SocialMediaManager` agent that, among other things, oversees this `SocialMediaCampaignAgent`. Right now the `SocialMediaManager` class is just a thin layer on top of the campaign agents, but it can be extended to do other social media tasks as well as reporting and analytics."
    ]
   },
   {
@@ -2556,8 +2562,52 @@
    "outputs": [],
    "source": [
     "class SocialMediaManager:\n",
-    "    \"\"\"AI agent for managing all the social media.\"\"\"\n",
-    "    pass"
+    "    \"\"\"Orchestrator that runs the full social media campaign pipeline.\"\"\"\n",
+    "    def __init__(self):\n",
+    "        self.idea_generator = SocialMediaCampaignIdeaGenerationAgent()\n",
+    "        self.campaign_agent = SocialMediaCampaignAgent()\n",
+    "\n",
+    "    def run_full_campaign(self):\n",
+    "        # 1. Generate and select best idea\n",
+    "        best_idea: ProposedIdea = self.idea_generator.generate_and_return_best_ideas(total_ideas=1)[0]\n",
+    "\n",
+    "        # 2. Run full campaign creation pipeline for that idea\n",
+    "        campaign_outputs = self.campaign_agent.run(best_idea)\n",
+    "\n",
+    "        return {\n",
+    "            \"idea\": best_idea,\n",
+    "            **campaign_outputs\n",
+    "        }\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To run all this, we can simply run the following."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    manager = SocialMediaManager()\n",
+    "    result = manager.run_full_campaign()\n",
+    "\n",
+    "    print(\"\\n--- Final Campaign Outputs ---\")\n",
+    "    print(\"\\nIDEA:\\n\", result[\"idea\"])\n",
+    "    print(\"\\nBLOG POST:\\n\", result[\"blog_post\"].blog_post)\n",
+    "    print(\"\\nBLOG EVALUATION:\\n\", result[\"blog_post\"].evaluation)\n",
+    "    print(\"\\nEMAIL BLAST:\\n\", result[\"email_blast\"].email_blast_draft)\n",
+    "    print(\"\\nEMAIL EVALUATION:\\n\", result[\"email_blast\"].evaluation)\n",
+    "    print(\"\\nSOCIAL POSTS:\")\n",
+    "    for post_with_eval in result[\"social_posts\"]:\n",
+    "        print(post_with_eval.social_media_post)\n",
+    "        print(post_with_eval.evaluation)\n",
+    "        print(\"---\")"
    ]
   },
   {
