Refactor files + add plan for future notebooks

--- a/marketing_agent_examples/v1_basic_workflows.ipynb
+++ b/marketing_agent_examples/v1_basic_workflows.ipynb
@@ -2589,7 +2589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2615,52 +2615,13 @@
    "metadata": {},
    "source": [
     "### 1j. Takeaways and possible next steps.\n",
-    "\n"
+    "Here, we've gone over how to create an AI agent that uses sequential steps in order to write social media content. In other notebooks, we'll go over how to use other AI agent frameworks and paradigms.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## 2. Parallelization\n",
-    "\n",
-    "(take the steps from above and pick some to rewrite or redo to include parallelization, and why to do parallelization in the first place. Should explain why parallelization is appropriate in some cases)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3. Routing\n",
-    "\n",
-    "(take the steps from above and pick some to rewrite or redo to include routing, and why to do routing in the first place. Should explain why routing is appropriate in some cases)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. Orchestrator-subagents"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5. Evaluator-optimizer\n",
-    "\n",
-    "Note: an example could be having an agent rewrite posts (IDK if that's best here or somewhere else)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## What's next?\n",
-    "(suggestions for how to improve what we've built, e.g., evals, how to optimize, etc.)\n",
-    "\n",
-    "(could put this in a different Jupyter notebook TBH? Something about follow-ups? IDK if best here, since this would likely be generic across all workflows)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
